--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,15 @@
 /* Add CSS Styling */
+
+.button-one {
+    background-color: black;
+    color: white;
+}
+
+.button-two {
+    background-color: yellow;
+}
+
+button {
+    font: 28px;
+    font-family: Helvetica, 'Times New Roman', sans-serif;
+}
