--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,16 +1,22 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  display: block;
+  font-size: 14px;
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: auto;
+  padding: 16px 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .content {
@@ -18,10 +24,16 @@ body {
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
+  padding: 8px;
+  margin-top: 8px;
+
 }
 
 button {
+  display: block;
+  margin: 0 auto;
   background: white;
-  border: 1px solid #eee;
+  padding: 8px 24px;
 }
