--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,18 +2,27 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
 }
 
+.body {
+  display: flex;
+  flex: 1;
+}
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
 }
 
 .sidebar {
@@ -26,4 +35,11 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+.container {
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
 }
